# hacknotts-checkin

./: Cargo.toml  README.md
src/: checkin_output.rs  error.rs  main.rs  stdout_checkin_output.rs  tito_types.rs  typst_checkin_output.rs
template/: main.typ
